inclusão de paragrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Primeiro HTML no GitHub, </h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, dolorum voluptate? Adipisci doloremque qui atque. Quibusdam odit maiores, consequuntur non sequi a magnam cum repellendus, ipsa dolorem nobis! Omnis vel veniam neque odit voluptatum. Dolores consequatur recusandae voluptatem quisquam odio necessitatibus molestias unde soluta tempora. Debitis provident rerum fuga molestiae.
 </body>
 </html>
